--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-09-04T17:43:06Z</date>
+						<date>2019-09-14T00:04:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6JHwq60letj3
-								YCrWYTYf8A==
+								XVyz7s7N0bLj
+								IwWxcTGw/g==
 								</data>
 								<key>Size</key>
-								<integer>55797</integer>
+								<integer>55793</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
