Sara Walker Alife
Sara Walker Alife

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -13594,7 +13594,7 @@
 					<key>page77 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:34Z</date>
+						<date>2019-09-17T13:57:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13613,11 +13613,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZFHf9zniv4SK
-								z9ywIWAR7Q==
+								kDQdTd/TojTe
+								5RskwegNJw==
 								</data>
 								<key>Size</key>
-								<integer>124861</integer>
+								<integer>361514</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -13639,6 +13639,16 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
+							<key>files/stacks-image-9e44611-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2JgQRnU8vli
+								4tDM37CK6w==
+								</data>
+								<key>Size</key>
+								<integer>254053</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -13649,35 +13659,45 @@
 								<key>Size</key>
 								<integer>19413</integer>
 							</dict>
+							<key>files/stacks-image-eba9e45-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2JgQRnU8vli
+								4tDM37CK6w==
+								</data>
+								<key>Size</key>
+								<integer>254053</integer>
+							</dict>
 							<key>files/stacks_page_page77.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HvLajRs2VCcz
-								u5xNfXwaHA==
+								KWD+cUA4dowG
+								wA9Eo93i2Q==
 								</data>
 								<key>Size</key>
-								<integer>122885</integer>
+								<integer>127408</integer>
 							</dict>
 							<key>files/stacks_page_page77.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								H8Fh+vBApP0T
-								e4XMh4PSLw==
+								YegmSCGyf3ux
+								RLn7YL94PA==
 								</data>
 								<key>Size</key>
-								<integer>24324</integer>
+								<integer>24506</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dYhhxew0vjMT
-								gqCxCpLr3A==
+								C9NsqcmaavEY
+								RsSHw0qiJA==
 								</data>
 								<key>Size</key>
-								<integer>51767</integer>
+								<integer>56810</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13906,7 +13926,7 @@
 					<key>page79 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:34Z</date>
+						<date>2019-09-17T13:38:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13925,11 +13945,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZFHf9zniv4SK
-								z9ywIWAR7Q==
+								kDQdTd/TojTe
+								5RskwegNJw==
 								</data>
 								<key>Size</key>
-								<integer>124861</integer>
+								<integer>361514</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -14005,11 +14025,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V26WvS5o376f
-								rj4cS4nTmg==
+								6euu1tvQfQh6
+								G9ZLfBIP5g==
 								</data>
 								<key>Size</key>
-								<integer>139069</integer>
+								<integer>140198</integer>
 							</dict>
 							<key>files/stacks_page_page79.js</key>
 							<dict>
@@ -14025,11 +14045,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sp6+VVUCQjEl
-								FGWIBUqk2w==
+								gGG7+xK2VzNe
+								7b/qM6gnPg==
 								</data>
 								<key>Size</key>
-								<integer>69207</integer>
+								<integer>69698</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15684,7 +15704,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-09-14T00:04:06Z</date>
+						<date>2019-09-17T13:57:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16763,8 +16783,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Wl9RWZk7vQLG
-								T2BPF3g+EA==
+								wNRu0D7jvIye
+								XRnn0K+jKg==
 								</data>
 								<key>Size</key>
 								<integer>3904</integer>
@@ -16921,7 +16941,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGWMv82Yl+ADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGYjvUcNz+ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16931,14 +16951,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwZYy/zZi
-				9oAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwZiO9Rw3
+				34AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBljL/NmMX
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBmI71HDgR
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16948,7 +16968,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBljL/NmM5gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBmI71HDgqgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16958,7 +16978,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBljL/NmNSgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBmI71HDhDgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
