--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:34Z</date>
+						<date>2019-09-17T13:57:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -54,11 +54,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZFHf9zniv4SK
-								z9ywIWAR7Q==
+								kDQdTd/TojTe
+								5RskwegNJw==
 								</data>
 								<key>Size</key>
-								<integer>124861</integer>
+								<integer>361514</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -80,6 +80,16 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
+							<key>files/stacks-image-9e44611-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2JgQRnU8vli
+								4tDM37CK6w==
+								</data>
+								<key>Size</key>
+								<integer>254053</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -90,35 +100,45 @@
 								<key>Size</key>
 								<integer>19413</integer>
 							</dict>
+							<key>files/stacks-image-eba9e45-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2JgQRnU8vli
+								4tDM37CK6w==
+								</data>
+								<key>Size</key>
+								<integer>254053</integer>
+							</dict>
 							<key>files/stacks_page_page77.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HvLajRs2VCcz
-								u5xNfXwaHA==
+								KWD+cUA4dowG
+								wA9Eo93i2Q==
 								</data>
 								<key>Size</key>
-								<integer>122885</integer>
+								<integer>127408</integer>
 							</dict>
 							<key>files/stacks_page_page77.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								H8Fh+vBApP0T
-								e4XMh4PSLw==
+								YegmSCGyf3ux
+								RLn7YL94PA==
 								</data>
 								<key>Size</key>
-								<integer>24324</integer>
+								<integer>24506</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dYhhxew0vjMT
-								gqCxCpLr3A==
+								C9NsqcmaavEY
+								RsSHw0qiJA==
 								</data>
 								<key>Size</key>
-								<integer>51767</integer>
+								<integer>56810</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
