--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -16,16 +16,14 @@
 		<string>page5</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
-	<key>selectedInspectorTab</key>
-	<string>info</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page79</string>
+		<string>page77</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
