--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-09-10T19:21:24Z</date>
+						<date>2019-09-23T15:54:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -482,11 +482,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V1YggYSsMETK
-								fonxh9bO5Q==
+								tnkTOaWK9XwO
+								4cyQswVcdQ==
 								</data>
 								<key>Size</key>
-								<integer>153643</integer>
+								<integer>153644</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
