--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-07T19:01:56Z</date>
+						<date>2019-10-08T14:45:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -234,11 +234,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								f60Tsc6V8QzG
-								RmHWrZpVEw==
+								1s3QG9iC0XnI
+								toFjOecvOw==
 								</data>
 								<key>Size</key>
-								<integer>114316</integer>
+								<integer>114296</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
