--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-07T19:01:56Z</date>
+						<date>2019-10-08T14:45:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -254,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VV1oR9dW+GWy
-								VniVGjziVw==
+								6DSaiQTMeLHQ
+								mSZPaK9Ukw==
 								</data>
 								<key>Size</key>
-								<integer>100149</integer>
+								<integer>100129</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
