--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -12632,7 +12632,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-30T15:55:04Z</date>
+						<date>2019-10-08T18:11:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12757,6 +12757,26 @@
 								<key>Size</key>
 								<integer>25182</integer>
 							</dict>
+							<key>files/stacks-image-408acec-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yl+noFuihQDB
+								mkC/iWxfyw==
+								</data>
+								<key>Size</key>
+								<integer>24091</integer>
+							</dict>
+							<key>files/stacks-image-408acec-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								HqjI6m4IhLxu
+								ouQBDLM+Sg==
+								</data>
+								<key>Size</key>
+								<integer>39876</integer>
+							</dict>
 							<key>files/stacks-image-4ae8ac8-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -12776,26 +12796,6 @@
 								</data>
 								<key>Size</key>
 								<integer>73796</integer>
-							</dict>
-							<key>files/stacks-image-4b83eed-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								fBl0Ik7dz2+I
-								KXYJnH691A==
-								</data>
-								<key>Size</key>
-								<integer>21654</integer>
-							</dict>
-							<key>files/stacks-image-4b83eed-400x400@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								DIFbycooCMp/
-								km0ee147TA==
-								</data>
-								<key>Size</key>
-								<integer>34777</integer>
 							</dict>
 							<key>files/stacks-image-515f404-400x400.jpg</key>
 							<dict>
@@ -12981,8 +12981,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								D7MqX/qmOgx1
-								7rqCuKNDjw==
+								8xqWGPQg+QrU
+								tZaW57Y4Ug==
 								</data>
 								<key>Size</key>
 								<integer>98384</integer>
@@ -15934,7 +15934,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T14:45:30Z</date>
+						<date>2019-10-08T18:11:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17013,8 +17013,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0nSg5IkZh4/G
-								9C+bz/bHbQ==
+								2ne+V1qjzkJR
+								tr1V+Ht9RQ==
 								</data>
 								<key>Size</key>
 								<integer>3904</integer>
@@ -17173,8 +17173,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwaZs
-				RfXY4IAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwaaE
+				eJJyQ4AO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17184,14 +17184,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBpmxF9dlegA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBpoR4knLrgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcGmbEX12YiADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcGmhHiScxWADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17200,8 +17200,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGmbEX1
-				2aGADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGmhHiS
+				czaADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17210,7 +17210,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcGmbEX12bKADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcGmhHiSc1iADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
