MM team photo updates
MM team photo updates

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -12632,7 +12632,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T18:11:59Z</date>
+						<date>2019-10-09T14:33:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12657,6 +12657,36 @@
 								<key>Size</key>
 								<integer>361514</integer>
 							</dict>
+							<key>files/stacks-image-009912e-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ine39fAPBSwT
+								+DHzGXxx4A==
+								</data>
+								<key>Size</key>
+								<integer>34587</integer>
+							</dict>
+							<key>files/stacks-image-01d9136-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CwG9eT9ZfLts
+								S3Anzzq4+Q==
+								</data>
+								<key>Size</key>
+								<integer>22918</integer>
+							</dict>
+							<key>files/stacks-image-01d9136-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								cu3lXb8q3Doa
+								HXIkekvs4A==
+								</data>
+								<key>Size</key>
+								<integer>36133</integer>
+							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
 								<key>Digest</key>
@@ -12676,6 +12706,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-0fbca84-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SeGAp0Wg9lBR
+								ek9FYclXeQ==
+								</data>
+								<key>Size</key>
+								<integer>30221</integer>
+							</dict>
+							<key>files/stacks-image-0fbca84-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yfG6AOg+8WBT
+								4jFskP8ZPw==
+								</data>
+								<key>Size</key>
+								<integer>45909</integer>
 							</dict>
 							<key>files/stacks-image-18f1b71-400x400.jpg</key>
 							<dict>
@@ -12757,46 +12807,6 @@
 								<key>Size</key>
 								<integer>25182</integer>
 							</dict>
-							<key>files/stacks-image-408acec-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								yl+noFuihQDB
-								mkC/iWxfyw==
-								</data>
-								<key>Size</key>
-								<integer>24091</integer>
-							</dict>
-							<key>files/stacks-image-408acec-400x400@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								HqjI6m4IhLxu
-								ouQBDLM+Sg==
-								</data>
-								<key>Size</key>
-								<integer>39876</integer>
-							</dict>
-							<key>files/stacks-image-4ae8ac8-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								46nLWx6V/dV9
-								p98/Ed+u1Q==
-								</data>
-								<key>Size</key>
-								<integer>41166</integer>
-							</dict>
-							<key>files/stacks-image-4ae8ac8-400x400@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								pjxlPcvK2c9+
-								NqhDvvv+Cg==
-								</data>
-								<key>Size</key>
-								<integer>73796</integer>
-							</dict>
 							<key>files/stacks-image-515f404-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -12816,16 +12826,6 @@
 								</data>
 								<key>Size</key>
 								<integer>62510</integer>
-							</dict>
-							<key>files/stacks-image-662d1db-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								PldwRjal5lL7
-								J2jxyYuIvA==
-								</data>
-								<key>Size</key>
-								<integer>26870</integer>
 							</dict>
 							<key>files/stacks-image-6c97661.png</key>
 							<dict>
@@ -12856,6 +12856,16 @@
 								</data>
 								<key>Size</key>
 								<integer>42198</integer>
+							</dict>
+							<key>files/stacks-image-9785b82-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								tWSwVWxT5Onc
+								LWl1iviivw==
+								</data>
+								<key>Size</key>
+								<integer>42163</integer>
 							</dict>
 							<key>files/stacks-image-9874180-400x400.jpg</key>
 							<dict>
@@ -12917,15 +12927,25 @@
 								<key>Size</key>
 								<integer>1112314</integer>
 							</dict>
-							<key>files/stacks-image-c55cf75-400x400.jpg</key>
+							<key>files/stacks-image-c269e63-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4suqGNDzUilr
-								f12FWRUY/w==
+								OK7FeKMRfCSj
+								1Z+jp390iA==
 								</data>
 								<key>Size</key>
-								<integer>40780</integer>
+								<integer>31949</integer>
+							</dict>
+							<key>files/stacks-image-c269e63-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								n1VTiC2H9t5z
+								JA7/FfX7dQ==
+								</data>
+								<key>Size</key>
+								<integer>50253</integer>
 							</dict>
 							<key>files/stacks-image-ddd9365-698x116.png</key>
 							<dict>
@@ -12936,16 +12956,6 @@
 								</data>
 								<key>Size</key>
 								<integer>31117</integer>
-							</dict>
-							<key>files/stacks-image-e610b5d-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ZhSw8X9HxSe2
-								LUIDQ5Xn4w==
-								</data>
-								<key>Size</key>
-								<integer>25837</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
@@ -12981,11 +12991,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8xqWGPQg+QrU
-								tZaW57Y4Ug==
+								tWP3lXTuumXB
+								DqzFzh3nyQ==
 								</data>
 								<key>Size</key>
-								<integer>98384</integer>
+								<integer>98483</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15822,7 +15832,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T14:45:30Z</date>
+						<date>2019-10-09T14:04:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15851,11 +15861,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/0lDSeNss+dI
-								q5UyZQPRyw==
+								XhNV0dwaYfhO
+								xESw1B+5iQ==
 								</data>
 								<key>Size</key>
-								<integer>5952</integer>
+								<integer>5984</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15934,7 +15944,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T18:11:59Z</date>
+						<date>2019-10-09T14:04:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17013,11 +17023,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2ne+V1qjzkJR
-								tr1V+Ht9RQ==
+								cBkcoqp9FdPG
+								rPWW6ZDeIA==
 								</data>
 								<key>Size</key>
-								<integer>3904</integer>
+								<integer>4681</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -17173,8 +17183,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwaaE
-				eJJyQ4AO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwacT
+				oisE7oAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17184,14 +17194,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBpoR4knLrgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBpxOiKwV1gA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcGmhHiScxWADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcGnE6IrBbiADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17200,8 +17210,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGmhHiS
-				czaADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGnE6Ir
+				BdGADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17210,7 +17220,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcGmhHiSc1iADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcGnE6IrBeqADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
