--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T18:11:59Z</date>
+						<date>2019-10-09T14:33:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -58,6 +58,36 @@
 								<key>Size</key>
 								<integer>361514</integer>
 							</dict>
+							<key>files/stacks-image-009912e-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ine39fAPBSwT
+								+DHzGXxx4A==
+								</data>
+								<key>Size</key>
+								<integer>34587</integer>
+							</dict>
+							<key>files/stacks-image-01d9136-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CwG9eT9ZfLts
+								S3Anzzq4+Q==
+								</data>
+								<key>Size</key>
+								<integer>22918</integer>
+							</dict>
+							<key>files/stacks-image-01d9136-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								cu3lXb8q3Doa
+								HXIkekvs4A==
+								</data>
+								<key>Size</key>
+								<integer>36133</integer>
+							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
 								<key>Digest</key>
@@ -77,6 +107,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-0fbca84-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SeGAp0Wg9lBR
+								ek9FYclXeQ==
+								</data>
+								<key>Size</key>
+								<integer>30221</integer>
+							</dict>
+							<key>files/stacks-image-0fbca84-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yfG6AOg+8WBT
+								4jFskP8ZPw==
+								</data>
+								<key>Size</key>
+								<integer>45909</integer>
 							</dict>
 							<key>files/stacks-image-18f1b71-400x400.jpg</key>
 							<dict>
@@ -158,46 +208,6 @@
 								<key>Size</key>
 								<integer>25182</integer>
 							</dict>
-							<key>files/stacks-image-408acec-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								yl+noFuihQDB
-								mkC/iWxfyw==
-								</data>
-								<key>Size</key>
-								<integer>24091</integer>
-							</dict>
-							<key>files/stacks-image-408acec-400x400@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								HqjI6m4IhLxu
-								ouQBDLM+Sg==
-								</data>
-								<key>Size</key>
-								<integer>39876</integer>
-							</dict>
-							<key>files/stacks-image-4ae8ac8-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								46nLWx6V/dV9
-								p98/Ed+u1Q==
-								</data>
-								<key>Size</key>
-								<integer>41166</integer>
-							</dict>
-							<key>files/stacks-image-4ae8ac8-400x400@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								pjxlPcvK2c9+
-								NqhDvvv+Cg==
-								</data>
-								<key>Size</key>
-								<integer>73796</integer>
-							</dict>
 							<key>files/stacks-image-515f404-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -217,16 +227,6 @@
 								</data>
 								<key>Size</key>
 								<integer>62510</integer>
-							</dict>
-							<key>files/stacks-image-662d1db-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								PldwRjal5lL7
-								J2jxyYuIvA==
-								</data>
-								<key>Size</key>
-								<integer>26870</integer>
 							</dict>
 							<key>files/stacks-image-6c97661.png</key>
 							<dict>
@@ -257,6 +257,16 @@
 								</data>
 								<key>Size</key>
 								<integer>42198</integer>
+							</dict>
+							<key>files/stacks-image-9785b82-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								tWSwVWxT5Onc
+								LWl1iviivw==
+								</data>
+								<key>Size</key>
+								<integer>42163</integer>
 							</dict>
 							<key>files/stacks-image-9874180-400x400.jpg</key>
 							<dict>
@@ -318,15 +328,25 @@
 								<key>Size</key>
 								<integer>1112314</integer>
 							</dict>
-							<key>files/stacks-image-c55cf75-400x400.jpg</key>
+							<key>files/stacks-image-c269e63-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4suqGNDzUilr
-								f12FWRUY/w==
+								OK7FeKMRfCSj
+								1Z+jp390iA==
 								</data>
 								<key>Size</key>
-								<integer>40780</integer>
+								<integer>31949</integer>
+							</dict>
+							<key>files/stacks-image-c269e63-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								n1VTiC2H9t5z
+								JA7/FfX7dQ==
+								</data>
+								<key>Size</key>
+								<integer>50253</integer>
 							</dict>
 							<key>files/stacks-image-ddd9365-698x116.png</key>
 							<dict>
@@ -337,16 +357,6 @@
 								</data>
 								<key>Size</key>
 								<integer>31117</integer>
-							</dict>
-							<key>files/stacks-image-e610b5d-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ZhSw8X9HxSe2
-								LUIDQ5Xn4w==
-								</data>
-								<key>Size</key>
-								<integer>25837</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
@@ -382,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8xqWGPQg+QrU
-								tZaW57Y4Ug==
+								tWP3lXTuumXB
+								DqzFzh3nyQ==
 								</data>
 								<key>Size</key>
-								<integer>98384</integer>
+								<integer>98483</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
